--- a/Domino/build.gradle
+++ b/Domino/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: "config.gradle" //这里表示引用config.gradle文件
 buildscript {
     
     repositories {
@@ -18,6 +18,8 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url "https://jitpack.io" }//RxCache 需要 jitpack 仓库
+        maven { url "https://maven.google.com" }//Support-library 需要 Google 仓库
         jcenter()
     }
 }
